# WeatherGCUNet

./: README.md  pyproject.toml  test_model_lightning.py  train_model_lightning.py
checkpoints/: 12H-epoch=22-val_loss=0.04492.ckpt  18H-epoch=21-val_loss=0.04894.ckpt  24H-epoch=27-val_loss=0.05188.ckpt  6H-epoch=18-val_loss=0.03635.ckpt
model/: info_aggregator.py  lightning_base.py  model.py  ops.py
utils/: data_module.py
