[project]
name = "weathergcunet"
version = "0.1.0"
description = "Code for training WeatherGC_UNet on Danish and Dutch datasets."
authors = [
    {name = "Robin Oostveen"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "lightning (>=2.5.3,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
